--- a/styles/sass/blocks/_map.scss
+++ b/styles/sass/blocks/_map.scss
@@ -4,7 +4,7 @@
 
   .map__title {
     @extend %title-h2;
-    max-width: 1312px;
+    max-width: calc(1440px - 10%);
     width: 90%;
     margin: 0 auto;
   }
