--- a/styles/sass/blocks/_catalog.scss
+++ b/styles/sass/blocks/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog {
   display: flex;
   flex-direction: column;
-  max-width: 1312px;
+  max-width: calc(1440px - 10%);
   width: 90%;
   margin: 0 auto 80px;
 
