--- a/styles/sass/blocks/_header.scss
+++ b/styles/sass/blocks/_header.scss
@@ -19,8 +19,8 @@
    }       
               
   .header__container {
-    max-width: 90%;
-    width: 100%;
+    max-width: calc(1440px - 10%);
+    width: 90%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
