--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -18,7 +18,7 @@
 
 @import './blocks/title';
 @import './blocks/lead';
-@import './blocks/navigation';
+@import './blocks/lead-buttons';
 @import './blocks/cities';
 @import './blocks/project';
 @import './blocks/about';
@@ -30,5 +30,5 @@
 @import './blocks/about-project';
 @import './blocks/titleblock';
 @import './blocks/idea';
-@import './blocks/catalog';
+@import './blocks/classificator';
 
