--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -31,4 +31,6 @@
 @import './blocks/titleblock';
 @import './blocks/idea';
 @import './blocks/classificator';
+@import './blocks/catalog';
+@import './blocks/pagination';
 
