--- a/styles/sass/blocks/_article.scss
+++ b/styles/sass/blocks/_article.scss
@@ -17,5 +17,18 @@
     p {
       @extend %text-lora;
     }
+
+    a {
+      @extend %silly-link;
+      color: $primary-color-default;
+
+      &:hover {
+        color: $primary-color-hovered;
+      }
+
+      &:active {
+        color: $primary-color-onclick;
+      }
+    }
   }
 }
