--- a/styles/sass/blocks/_catalog.scss
+++ b/styles/sass/blocks/_catalog.scss
@@ -1,28 +1,26 @@
-.classificator {
-  display: flex;
-  flex-direction: column;
-  max-width: calc(1440px - 10%);
-  width: 90%;
-  margin: 0 auto 80px;
+.catalog__ideas {
+  background-color: $light-color-hovered;
+  box-sizing: border-box;
+  padding: 80px 0;
 
-  .classificator__title {
-    @extend %title-h2;
-    margin-bottom: $spacer-m;
+  .ideas__list {
+    max-width: calc(1440px - 10%);
+    width: 90%;
+    margin: 0 auto;
   }
 
-  .classificator__list {
+  .catalog__list {
     list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: $spacer-xs;
     column-gap: $spacer-m;
+    margin-bottom: $spacer-m;
     justify-content: center;
   }
 
-  .classificator__item {
+  .catalog__item {
     flex-shrink: 0;
     
     a {
@@ -49,7 +47,5 @@
     }
   }
 
-  &.classificator__pushed {
-    margin-top: $spacer-m;
-  }
+
 }
