--- a/styles/sass/blocks/_ideas.scss
+++ b/styles/sass/blocks/_ideas.scss
@@ -10,157 +10,163 @@
     margin-bottom: $spacer-m;
   }
 
-  .ideas__list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 100%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    column-gap: $spacer-m;
 
-    @media screen and (max-width: $tablet) {
-      grid-template-columns: repeat(2, 1fr);
-      row-gap: $spacer-xl;
-    }
+}
 
-    @media screen and (max-width: $mobile) {
-      grid-template-columns: 1fr;
-    }
-  }
-
-
-  .ideas__item {
-    display: flex;
-    flex-direction: column;
-    background-color: $light-color-hovered;
-    min-height: 412px;
-  }
-
-  .ideas__img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  .ideas__card {
-    width: 100%;
-    box-sizing: border-box;
-    padding: $spacer-xs;
-    display: flex;
-    flex-direction: column;
-    row-gap: calc($spacer-xxs /2);
-    height: 100%;
-  }
-
-  .ideas__tag {
-    @extend %text-circe-16;
+.ideas__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: $spacer-m;
   
-    color: $middle-dark-color-default;
-    a {
-      @extend %silly-link;
-      @extend %transition;
 
-      &:hover {
-        color: $middle-dark-color-hovered;
-      }
-      &:active {
-        color: $middle-dark-color-onclick;
-      }
-    }
+  @media screen and (max-width: $tablet) {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: $spacer-xl;
   }
 
-  .ideas__cardtitle {
-    @extend %title-h4;
-    margin-bottom: 4px;
-    
-    a {
-      @extend %silly-link;
-      @extend %transition;
-
-      &:hover {
-        color: $dark-color-hovered;
-      }
-      &:active {
-        color: $dark-color-onclick;
-      }
-    }
+  @media screen and (max-width: $mobile) {
+    grid-template-columns: 1fr;
   }
+}
 
-  .ideas__description {
-    @extend %text-circe-16;
-    line-height: 20px;
-  }
-  .ideas__footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: auto;
-  }
 
-  .ideas__author {
-    @extend %text-circe-16;
-    color: $middle-dark-color-default;
-  }
-  .ideas__like {
-    @extend %button;
-    padding: 0;
-    margin: 0 4px 0 auto;
-    width: 18px;
-    height: 18px;
-    min-height: 0;
-    display: block;
+.ideas__item {
+  display: flex;
+  flex-direction: column;
+  background-color: $light-color-hovered;
+  min-height: 412px;
+}
 
-    svg {
-      @extend %transition;
+.ideas__img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
+}
 
-      stroke:$dark-color-hovered;
-      fill: none;
-    }
+.ideas__card {
+  width: 100%;
+  box-sizing: border-box;
+  padding: $spacer-xs;
+  display: flex;
+  flex-direction: column;
+  row-gap: calc($spacer-xxs /2);
+  height: 100%;
+}
+
+.ideas__tag {
+  @extend %text-circe-16;
+
+  color: $middle-dark-color-default;
+  a {
+    @extend %silly-link;
+    @extend %transition;
 
     &:hover {
-      svg {
-        stroke: $danger-color-onclick;
-      }
+      color: $middle-dark-color-hovered;
     }
-
-    &.liked {
-      svg {
-        stroke:$danger-color-onclick;
-        fill: $danger-color-onclick;
-      }
-
-      &:hover {
-        svg {
-          stroke:$danger-color-hovered;
-          fill: $danger-color-hovered;
-        }
-      }
-    }
-
-  }
-  .ideas__like-counter {
-    @extend %text-circe-16;
-    color: $dark-color-hovered;
-  }
-
-  .ideas__showmore {
-    @extend %button;
-    @extend %text-circe-18;
-    margin: $spacer-l auto 0;
-    background-color: $primary-color-default;
-    color: $light-color-default;
-    width: fit-content;
-
-    &:hover {
-      background-color: $primary-color-hovered;
-      color: $light-color-hovered;
-    }
-
     &:active {
-      background-color: $primary-color-onclick;
-      color: $light-color-onclick;
+      color: $middle-dark-color-onclick;
     }
+  }
+}
+
+.ideas__cardtitle {
+  @extend %title-h4;
+  margin-bottom: 4px;
+  
+  a {
+    @extend %silly-link;
+    @extend %transition;
+
+    &:hover {
+      color: $dark-color-hovered;
+    }
+    &:active {
+      color: $dark-color-onclick;
+    }
+  }
+}
+
+.ideas__description {
+  @extend %text-circe-16;
+  line-height: 20px;
+}
+
+.ideas__footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: auto;
+}
+
+.ideas__author {
+  @extend %text-circe-16;
+  color: $middle-dark-color-default;
+}
+
+.ideas__like {
+  @extend %button;
+  padding: 0;
+  margin: 0 4px 0 auto;
+  width: 18px;
+  height: 18px;
+  min-height: 0;
+  display: block;
+
+  svg {
+    @extend %transition;
+
+    stroke:$dark-color-hovered;
+    fill: none;
+  }
+
+  &:hover {
+    svg {
+      stroke: $danger-color-onclick;
+    }
+  }
+
+  &.liked {
+    svg {
+      stroke:$danger-color-onclick;
+      fill: $danger-color-onclick;
+    }
+
+    &:hover {
+      svg {
+        stroke:$danger-color-hovered;
+        fill: $danger-color-hovered;
+      }
+    }
+  }
+
+}
+
+.ideas__like-counter {
+  @extend %text-circe-16;
+  color: $dark-color-hovered;
+}
+
+.ideas__showmore {
+  @extend %button;
+  @extend %text-circe-18;
+  margin: $spacer-l auto 0;
+  background-color: $primary-color-default;
+  color: $light-color-default;
+  width: fit-content;
+
+  &:hover {
+    background-color: $primary-color-hovered;
+    color: $light-color-hovered;
+  }
+
+  &:active {
+    background-color: $primary-color-onclick;
+    color: $light-color-onclick;
   }
 }
