feat: страница о проекте

--- a/styles/sass/blocks/_breadcrumb.scss
+++ b/styles/sass/blocks/_breadcrumb.scss
@@ -35,7 +35,7 @@
       color: $middle-dark-color-default;
     }
     &:active {
-      color: $light-color-onclick;
+      color: $middle-dark-color-onclick;
     }
     @media screen and (max-width: $mobile) {
       font-size: 14px;     
