--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -72,7 +72,7 @@ ul {
 /*----------------------------------- spacers -----------------------------------*/
 /*----------------------------------- transitions -----------------------------------*/
 /*----------------------------------- titles -----------------------------------*/
-.cover .cover__title, .about-project .about-project__item-title, .ideas__cardtitle, .about .about__card-title, .project .project__tag, .project .project__title, .footer .footer__emails p, .header .header__link, .idea .idea__cardtitle, .classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city, .title, .city .city__title, .lead__slide .lead__title-wrapper a, .lead__slide .lead__title-wrapper p {
+.cover .cover__title, .accordions .accordion .accordion__title, .about-project .about-project__item-title, .ideas__cardtitle, .about .about__card-title, .project .project__tag, .project .project__title, .footer .footer__emails p, .header .header__link, .idea .idea__cardtitle, .accordions .accordions__title, .classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city, .title, .city .city__title, .lead__slide .lead__title-wrapper a, .lead__slide .lead__title-wrapper p {
   font-family: "Circe";
   font-style: normal;
   font-weight: 700;
@@ -101,12 +101,12 @@ ul {
   }
 }
 
-.classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city {
+.accordions .accordions__title, .classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city {
   font-size: 26px;
   line-height: 34px;
 }
 @media screen and (max-width: 1024px) {
-  .classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city {
+  .accordions .accordions__title, .classificator .classificator__title, .titleblock .title, .about-project .about-project__title, .publication .publication__title, .publications .publications__title, .ideas .ideas__title, .map .map__title, .article .article__title, .lead-buttons__button .lead-buttons__city {
     font-size: 22px;
     line-height: 24px;
   }
@@ -117,7 +117,7 @@ ul {
   line-height: 24px;
 }
 
-.about-project .about-project__item-title, .ideas__cardtitle, .about .about__card-title, .project .project__tag, .project .project__title, .footer .footer__emails p, .header .header__link {
+.accordions .accordion .accordion__title, .about-project .about-project__item-title, .ideas__cardtitle, .about .about__card-title, .project .project__tag, .project .project__title, .footer .footer__emails p, .header .header__link {
   font-size: 16px;
   line-height: 24px;
 }
@@ -156,7 +156,7 @@ ul {
 }
 
 /*----------------------------------- lora text -----------------------------------*/
-.about-project .about-project__item-text, .publication .publication__text, .article .article__text p, .cover .cover__subtitle, .about .about__card-text, .city .city__description, .city .city__subtitle {
+.accordions .accordion .accordion__container p, .about-project .about-project__item-text, .publication .publication__text, .article .article__text p, .cover .cover__subtitle, .about .about__card-text, .city .city__description, .city .city__subtitle {
   font-family: "Lora";
   font-style: normal;
   font-weight: 400;
@@ -170,18 +170,18 @@ ul {
 }
 
 /*----------------------------------- custom cursor -----------------------------------*/
-.carousel__dots .carousel__dot:hover, .carousel__button:hover, .idea .idea__like-box .idea__like:hover, .idea .idea__button:hover, .ideas__showmore:hover, .ideas__like:hover, .lead-buttons__button:hover, .lead__slide .lead__button:hover, .pagination .pagination__link:hover, .catalog__ideas .catalog__item a:hover, .classificator .classificator__item a:hover, .idea .idea__cardtitle a:hover, .idea .idea__tag a:hover, .publication .publication__title a:hover, .publication .publication__img:hover, .publication .publication__type:hover, .ideas__cardtitle a:hover, .ideas__tag a:hover, .article .article__text a:hover, .project:hover, .city .city__title a:hover, .lead__slide .lead__title-wrapper a:hover, .breadcrumb__item a:hover, .footer .footer__links a:hover, .footer .footer__emails a:hover, .header .header__link:hover, .header .header__burger:hover, .header .header__logo:hover {
+.carousel__dots .carousel__dot:hover, .carousel__button:hover, .idea .idea__like-box .idea__like:hover, .idea .idea__button:hover, .ideas__showmore:hover, .ideas__like:hover, .lead-buttons__button:hover, .lead__slide .lead__button:hover, .accordions .accordion .accordion__trigger:hover, .pagination .pagination__link:hover, .catalog__ideas .catalog__item a:hover, .classificator .classificator__item a:hover, .idea .idea__cardtitle a:hover, .idea .idea__tag a:hover, .publication .publication__title a:hover, .publication .publication__img:hover, .publication .publication__type:hover, .ideas__cardtitle a:hover, .ideas__tag a:hover, .article .article__text a:hover, .project:hover, .city .city__title a:hover, .lead__slide .lead__title-wrapper a:hover, .breadcrumb__item a:hover, .footer .footer__links a:hover, .footer .footer__emails a:hover, .header .header__link:hover, .header .header__burger:hover, .header .header__logo:hover {
   cursor: url(../../images/Cursor-hand.svg), pointer;
 }
 
 /*----------------------------------- silly-link -----------------------------------*/
-.pagination .pagination__link, .catalog__ideas .catalog__item a, .classificator .classificator__item a, .idea .idea__cardtitle a, .idea .idea__tag a, .publication .publication__title a, .publication .publication__img, .publication .publication__type, .ideas__cardtitle a, .ideas__tag a, .article .article__text a, .project, .city .city__title a, .lead__slide .lead__title-wrapper a, .breadcrumb__item a, .footer .footer__links a, .footer .footer__emails a, .header .header__link, .header .header__burger, .header .header__logo {
+.accordions .accordion .accordion__trigger, .pagination .pagination__link, .catalog__ideas .catalog__item a, .classificator .classificator__item a, .idea .idea__cardtitle a, .idea .idea__tag a, .publication .publication__title a, .publication .publication__img, .publication .publication__type, .ideas__cardtitle a, .ideas__tag a, .article .article__text a, .project, .city .city__title a, .lead__slide .lead__title-wrapper a, .breadcrumb__item a, .footer .footer__links a, .footer .footer__emails a, .header .header__link, .header .header__burger, .header .header__logo {
   color: inherit;
   text-decoration: none;
 }
 
 /*----------------------------------- transition -----------------------------------*/
-.pagination .pagination__link, .idea .idea__like-box .idea__like svg, .idea .idea__cardtitle a, .idea .idea__tag a, .publication .publication__title a, .publication .publication__img img, .publication .publication__type, .ideas__like svg, .ideas__cardtitle a, .ideas__tag a, .project .project__title, .project, .footer .footer__links a, .footer .footer__emails a, .header .header__link, .header .header__list-social ul svg, .header .header__burger-lines, .lead .carousel__button, .idea .idea__like-box .idea__like, .idea .idea__button, .ideas__showmore, .ideas__like, .lead-buttons__button, .lead__slide .lead__button {
+.accordions .accordion .accordion__title, .accordions .accordion .accordion__trigger svg, .pagination .pagination__link, .idea .idea__like-box .idea__like svg, .idea .idea__cardtitle a, .idea .idea__tag a, .publication .publication__title a, .publication .publication__img img, .publication .publication__type, .ideas__like svg, .ideas__cardtitle a, .ideas__tag a, .project .project__title, .project, .footer .footer__links a, .footer .footer__emails a, .header .header__link, .header .header__list-social ul svg, .header .header__burger-lines, .lead .carousel__button, .idea .idea__like-box .idea__like, .idea .idea__button, .ideas__showmore, .ideas__like, .lead-buttons__button, .lead__slide .lead__button {
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
@@ -760,7 +760,7 @@ ul {
   color: #A7A6B5;
 }
 .breadcrumb__item a:active {
-  color: #FFFFFF;
+  color: #5A596E;
 }
 @media screen and (max-width: 550px) {
   .breadcrumb__item a {
@@ -1937,6 +1937,58 @@ ul {
 }
 .pagination .pagination__link svg {
   color: #2D8BF1;
+}
+
+.accordions {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  max-width: 644px;
+  width: 90%;
+  margin: 80px auto;
+}
+.accordions .accordions__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+}
+.accordions .accordion {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.accordions .accordion .accordion__trigger {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-height: 38px;
+  border-bottom: 1px solid #201E33;
+}
+.accordions .accordion .accordion__trigger:hover .accordion__title {
+  color: #605D7C;
+}
+.accordions .accordion .accordion__trigger:hover svg {
+  transform: rotate(180deg);
+}
+.accordions .accordion .accordion__container {
+  height: 0;
+  overflow: hidden;
+}
+.accordions .accordion .accordion__container p {
+  margin-bottom: 8px;
+}
+.accordions .accordion .accordion__container p:last-of-type {
+  margin-bottom: 0;
+}
+.accordions .accordion.accordion_opened .accordion__container {
+  height: fit-content;
+  padding-top: 8px;
+}
+.accordions .accordion.accordion_opened .accordion__trigger svg {
+  transform: rotate(180deg);
+}
+.accordions .accordion.accordion_opened .accordion__trigger:hover svg {
+  transform: rotate(0);
 }
 
 /*# sourceMappingURL=index.css.map */
