--- a/styles/sass/blocks/_cities.scss
+++ b/styles/sass/blocks/_cities.scss
@@ -74,7 +74,7 @@
     grid-template-rows: min-content;
     grid-template-columns: repeat(2, 1fr);
     column-gap: $spacer-s;
-    row-gap: $spacer-xxs / 2;
+    row-gap: 4px;
     
     @media screen and (max-width: 800px) {
       grid-template-areas: 
